# Litmanger

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build_exe.py  config.json  deploy_relay.sh  index.html  papers.json  pyproject.toml  relay_server.py  requirements.txt  run.bat  run.sh  server.py  watch_downloads.ps1
.github/workflows/: build.yml
litmanger/: __init__.py  __main__.py  cli.py  fetcher.py  models.py  pdf.py  server.py  templates.py  utils.py
static/: bookmarklet.js  save-paper.user.js
tests/: __init__.py  conftest.py  test_models.py  test_utils.py
