[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litmanger"
version = "2.0.0"
description = "Academic paper manager — collect metadata, BibTeX, and PDFs from journal websites"
authors = [{name = "Paper Collector Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
litmanger = "litmanger.cli:main"

[project.optional-dependencies]
full = ["requests>=2.28", "browser-cookie3>=0.19", "beautifulsoup4>=4.12", "bibtexparser>=1.4"]

[tool.setuptools.packages.find]
include = ["litmanger*"]
